accordion maxwidth - fix flow on small screens

--- a/styles/accordion.module.scss
+++ b/styles/accordion.module.scss
@@ -2,6 +2,7 @@
   box-shadow: 10px 10px 20px 0px #0000001a;
   border-radius: 1.875rem;
   overflow: hidden;
+  max-width: 85vw;
 
   &__header {
     background-color: var(--color-light);
